--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+bs4
+faiss-cpu
 ipykernel==6.29.5
 langchain==0.3.8
 langchain_experimental==0.3.3
@@ -6,4 +8,5 @@ langchain_ollama==0.2.0
 langchain-teddynote==0.3.37
 lxml==5.3.0
 openai==1.55.0
+pymupdf==1.25.0
 python-dotenv==1.0.1
